--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@popperjs/core": "^2.11.7",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -11,7 +12,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.3",
     "react-bootstrap-icons": "^1.10.3",
-    "react-dom": "^18.2.0",
+    "react-donpm install popper.js --savem": "^18.2.0",
     "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
     "semantic-ui-css": "^2.5.0",
