--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.3",
     "react-bootstrap-icons": "^1.10.3",
+    "react-icons": "^4.8.0",
     "react-router-dom": "^6.8.2",
     "react-scripts": "^5.0.1",
     "semantic-ui-css": "^2.5.0",
     "semantic-ui-react": "^2.1.4",
-    "web-vitals": "^2.1.4"
+    "universal-cookie": "^4.0.4",
+    "web-vitals": "^2.1.4",
+    "xlsx": "^0.18.5"
   },
   "scripts": {
     "start": "react-scripts start",
